@@ -3651,6 +3651,7 @@ STR_6450    :{BLACK}“{STRING}”
 STR_6451    :{BLACK}“{STRING}” - {STRING}
 STR_6452    :{WINDOW_COLOUR_2}Sells: {BLACK}{STRING}
 STR_6453    :Copy version info
+STR_6454    :Scale factor set to: {COMMA2DP32}
 
 #############
 # Scenarios #
